tests/script_errors/const_expr_index_into_int/error.txt
Error: 
    1 | {"snot": 42}.snot[5]
      |                   ^ Conflicting types, got integer but expected array
